# CLI-Research-Agent

./: README.md  pyproject.toml
cli/: main.py
examples/: sample_queries.md
src/agent/: agent.py  cli.py  streaming.py
src/agent/prompts/: system.txt
src/agent/tools/: __init__.py  registry.py  url_reader.py  web_search.py  wikipedia.py
tests/: test_agent.py  test_tools.py
tests/fixtures/: search_responses.json
